# xfce4-closebutton-plugin

./: AUTHORS  Makefile.am  README  README.md  TODO  configure.ac.in
icons/: Makefile.am
icons/48x48/: Makefile.am
panel-plugin/: Makefile.am  closebutton-dialog.glade  closebutton-settings.c  closebutton-settings.h  closebutton.c  closebutton.desktop.in  closebutton.h
po/: POTFILES.in  de.po
themes/: LICENSE  Makefile.am
themes/aero/: Makefile.am
themes/default/: Makefile.am
themes/octo/: Makefile.am
themes/oxygen/: Makefile.am
